--- a/web/package.json
+++ b/web/package.json
@@ -16,8 +16,15 @@
     "@redwoodjs/forms": "4.3.1",
     "@redwoodjs/router": "4.3.1",
     "@redwoodjs/web": "4.3.1",
+    "humanize-string": "2.1.0",
     "prop-types": "15.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.21",
+    "postcss-loader": "^7.1.0",
+    "tailwindcss": "^3.2.7"
   }
 }
